@bug PDA-1141 To hide some words when the text is too long in some pages

--- a/src/main/resources/static/common/css/category.css
+++ b/src/main/resources/static/common/css/category.css
@@ -78,6 +78,7 @@
     font-size: 36px;
     width: 510px;
     margin-left: 30px;
+    height: 40px;
 }
 
 #availability_region {
@@ -250,6 +251,7 @@
 .requisition_title_and_close_button {
     display: flex;
     justify-content: space-between;
+    padding-left: 15px;
 }
 
 .requisition_img_and_description {
@@ -259,9 +261,9 @@
 
 #requisition_detail_title {
     font-size: 20px;
-    text-align: right;
+    text-align: center;
     font-weight: 700;
-    width: 284px;
+    width: 345px;
 }
 
 .requisition_detail_overlay_img {
